made some changes

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Sreejith and this is my first webapp.blah blah blah
-            
+        <h4>Welcome Gayathri
+	</h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
