--- a/ui/article2.html
+++ b/ui/article2.html
@@ -1,4 +1,39 @@
 <html>
+  <head>
+   <title> Article one | Sreejithk
+   </title>    
+  </head>  
+      <body>
+     <div>
+<a href="/">HOME </a>    
+</div>    
+<div>
+<hr/>    
+</div>
+<div>
+<h3>
+Article one    
+</h3> 
+</div>
+<div>
+sept 30    
+</div>
+<div>
+<p>
+This is the content.view more.This is the content.view more.
+This is the content.view more.This is the content.view more.          
+</p>
+<p>
+This is the content.view more.This is the content.view more.
+This is the content.view more.This is the content.view more.          
+</p>  
+<p>
+This is the content.view more.This is the content.view more.
+This is the content.view more.This is the content.view more.          
+</p>  
+</div>
+</body>
+
 
 
 
