[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -2,8 +2,19 @@
   <head>
    <title> Article one | Sreejithk
    </title>    
-  </head>  
-      <body>
+ <style>
+ .container{
+ max-width: 800px;
+ margin: 0 auto;
+ color:grey;
+ font-family:optima;
+     
+ }    
+ </style> 
+  </head>
+  
+<body>
+<div class="container"> 
      <div>
 <a href="/">HOME </a>    
 </div>    
@@ -32,6 +43,7 @@ This is the content.view more.This is the content.view more.
 This is the content.view more.This is the content.view more.          
 </p>  
 </div>
+</div>    
 </body>
 
 
