--- a/ui/article1.html
+++ b/ui/article1.html
@@ -5,9 +5,13 @@
  <style>
  .container{
  max-width: 800px;
- margin: 0 auto;
- color:grey;
- font-family:optima;
+    margin: 0 auto;
+    color: black;
+    font-family: optima;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
      
  }    
  </style> 
