--- a/ui/article3.html
+++ b/ui/article3.html
@@ -2,9 +2,22 @@
   <head>
    <title> Article one | Sreejithk
    </title>    
-  </head>  
+  <style>
+ .container{
+ max-width: 800px;
+    margin: 0 auto;
+    color: black;
+    font-family: optima;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+ }    
+ </style> 
+  </head>
+  
       <body>
-     <div>
+     <div class="container">
+    <div>
 <a href="/">HOME </a>    
 </div>    
 <div>
@@ -31,6 +44,7 @@ This is the content.view more.This is the content.view more.
 This is the content.view more.This is the content.view more.
 This is the content.view more.This is the content.view more.          
 </p>  
+</div>
 </div>
 </body>
 
