[imad-console] Updates ui/article3.html

--- a/ui/article3.html
+++ b/ui/article3.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-   <title> Article one | Sreejithk
+   <title> Article three | Sreejithk
    </title>    
   <style>
  .container{
@@ -25,7 +25,7 @@
 </div>
 <div>
 <h3>
-Article one    
+Article three    
 </h3> 
 </div>
 <div>
