[imad-console] Updates ui/article2.html

--- a/ui/article2.html
+++ b/ui/article2.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-   <title> Article one | Sreejithk
+   <title> Article two | Sreejithk
    </title>    
    <style>
  .container{
@@ -27,7 +27,7 @@
 </div>
 <div>
 <h3>
-Article one    
+Article two 
 </h3> 
 </div>
 <div>
