[imad-console] Updates ui/article1.html

--- a/ui/article1.html
+++ b/ui/article1.html
@@ -1,21 +1,9 @@
 <html>
-  <head>
-   <title> Article one | Sreejithk
-   </title>    
- <style>
- .container{
- max-width: 800px;
-    margin: 0 auto;
-    color: black;
-    font-family: optima;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-
-     
- }    
- </style> 
-  </head>
+             <head>
+    <title> Article one | Sreejithk
+    </title>    
+<link href="/ui/style.css" rel="stylesheet" />    
+             </head>
   
 <body>
 <div class="container"> 
