--- a/ui/article3.html
+++ b/ui/article3.html
@@ -2,17 +2,8 @@
   <head>
    <title> Article three | Sreejithk
    </title>    
-  <style>
- .container{
- max-width: 800px;
-    margin: 0 auto;
-    color: black;
-    font-family: optima;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
- }    
- </style> 
+
+   <link href="/ui/style.css" rel="stylesheet" />
   </head>
   
       <body>
