--- a/ui/article2.html
+++ b/ui/article2.html
@@ -2,18 +2,7 @@
   <head>
    <title> Article two | Sreejithk
    </title>    
-   <style>
- .container{
- max-width: 800px;
-    margin: 0 auto;
-    color: black;
-    font-family: optima;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-
- }    
- </style> 
+   <link href="/ui/style.css" rel="stylesheet" />
   
   </head>
   
